kubernetes/apps/filebrowser-quantum/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser-quantum
  labels:
    app: filebrowser-quantum
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser-quantum
  template:
    metadata:
      labels:
        app: filebrowser-quantum
    spec:
      enableServiceLinks: true
      containers:
      - name: filebrowser-quantum
        image: gtstef/filebrowser:${FILEBROWSER_IMAGE_TAG}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: filebrowser-quantum-config
          mountPath: /home/filebrowser/data
        - name: filebrowser-quantum-config-file
          mountPath: /home/filebrowser/data/config.yaml
          subPath: config.yaml
        - name: filebrowser-quantum-cache
          mountPath: /home/filebrowser/data/tmp
        - name: filebrowser-quantum-data
          mountPath: /srv
      volumes:
      - name: filebrowser-quantum-config
        persistentVolumeClaim:
          claimName: filebrowser-quantum-config
      - name: filebrowser-quantum-data
        persistentVolumeClaim:
          claimName: filebrowser-quantum-data
      - name: filebrowser-quantum-config-file
        configMap:
          name: filebrowser-quantum-config-file
      - name: filebrowser-quantum-cache
        emptyDir: {}
