kubernetes/apps/filebrowser-quantum/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-quantum
spec:
  selector:
    app: filebrowser-quantum
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
