kubernetes/apps/filebrowser-quantum/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-quantum
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`quantum.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: filebrowser-quantum
          port: 80
  tls:
    secretName: efym-net-tls
